generator dbml {
  provider = "prisma-dbml-generator"
}

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id       Int        @id @default(autoincrement())
  email    String     @unique
  role     Role
  learning Learning[]
  teaching Teaching[]
}

model Field {
  id      Int      @id @default(autoincrement())
  name    String
  courses Course[]
}

model Room {
  id      Int      @id @default(autoincrement())
  number  String   @unique
  courses Course[]
}

model Course {
  roomId       Int
  fieldId      Int
  year         Int
  season       Season
  description  String?
  assignements Assignements[]
  field        Field          @relation(fields: [fieldId], references: [id])
  room         Room           @relation(fields: [roomId], references: [id])
  semester     Semester       @relation(fields: [year, season], references: [year, season])
  learning     Learning[]
  teaching     Teaching[]

  @@id([roomId, fieldId, year, season])
}

model Teaching {
  teacherId Int
  roomId    Int
  fieldId   Int
  year      Int
  season    Season
  course    Course @relation(fields: [roomId, fieldId, year, season], references: [roomId, fieldId, year, season])
  teacher   User   @relation(fields: [teacherId], references: [id])

  @@id([teacherId, roomId, fieldId, year, season])
}

model Learning {
  studentId Int
  roomId    Int
  fieldId   Int
  year      Int
  season    Season
  course    Course @relation(fields: [roomId, fieldId, year, season], references: [roomId, fieldId, year, season])
  student   User   @relation(fields: [studentId], references: [id])

  @@id([studentId, roomId, fieldId, year, season])
}

model Assignements {
  id             Int       @default(autoincrement())
  roomId         Int
  fieldId        Int
  year           Int
  season         Season
  startDate      DateTime
  endDate        DateTime?
  description    String
  estimated_time Int
  course         Course    @relation(fields: [roomId, fieldId, year, season], references: [roomId, fieldId, year, season])

  @@id([id, roomId, fieldId, year, season])
}

model Semester {
  year    Int
  season  Season
  name    String
  courses Course[]

  @@id([year, season])
}

enum Role {
  Admin
  Teacher
  Student
}

enum Season {
  Automn
  Spring
}
