//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  role Role [not null]
  learning Learning [not null]
  teaching Teaching [not null]
}

Table Field {
  id Int [pk, increment]
  name String [not null]
  courses Course [not null]
}

Table Room {
  id Int [pk, increment]
  number String [unique, not null]
  courses Course [not null]
}

Table Course {
  roomId Int [not null]
  fieldId Int [not null]
  year Int [not null]
  season Season [not null]
  description String
  assignements Assignements [not null]
  field Field [not null]
  room Room [not null]
  semester Semester [not null]
  learning Learning [not null]
  teaching Teaching [not null]

  indexes {
    (roomId, fieldId, year, season) [pk]
  }
}

Table Teaching {
  teacherId Int [not null]
  roomId Int [not null]
  fieldId Int [not null]
  year Int [not null]
  season Season [not null]
  course Course [not null]
  teacher User [not null]

  indexes {
    (teacherId, roomId, fieldId, year, season) [pk]
  }
}

Table Learning {
  studentId Int [not null]
  roomId Int [not null]
  fieldId Int [not null]
  year Int [not null]
  season Season [not null]
  course Course [not null]
  student User [not null]

  indexes {
    (studentId, roomId, fieldId, year, season) [pk]
  }
}

Table Assignements {
  id Int [increment, not null]
  roomId Int [not null]
  fieldId Int [not null]
  year Int [not null]
  season Season [not null]
  startDate DateTime [not null]
  endDate DateTime
  description String [not null]
  estimated_time Int [not null]
  course Course [not null]

  indexes {
    (id, roomId, fieldId, year, season) [pk]
  }
}

Table Semester {
  year Int [not null]
  season Season [not null]
  name String [not null]
  courses Course [not null]

  indexes {
    (year, season) [pk]
  }
}

Enum Role {
  Admin
  Teacher
  Student
}

Enum Season {
  Automn
  Spring
}

Ref: Course.fieldId > Field.id

Ref: Course.roomId > Room.id

Ref: Course.(year, season) > Semester.(year, season)

Ref: Teaching.(roomId, fieldId, year, season) > Course.(roomId, fieldId, year, season)

Ref: Teaching.teacherId > User.id

Ref: Learning.(roomId, fieldId, year, season) > Course.(roomId, fieldId, year, season)

Ref: Learning.studentId > User.id

Ref: Assignements.(roomId, fieldId, year, season) > Course.(roomId, fieldId, year, season)